--- a/preamble.tex
+++ b/preamble.tex
@@ -19,37 +19,87 @@
 %\setcopyright{rightsretained}
 %\copyrightyear{2017}           %% If different from \acmYear
 
-%% Bibliography style
+
+% ********************************************************************
+%
+%        Various Convenience Packages
+%
+% ********************************************************************
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{tcolorbox}
+\usepackage{amsmath,amsthm}
+
+\usepackage{xspace,url,hyperref,doi,wrapfig,stmaryrd,graphicx,xparse,etoolbox}
+\usepackage{caption,subcaption}
+\usepackage[inline]{enumitem}
+\usepackage{cancel}
+\usepackage[xcolor,rightbars]{changebar}
+%\usepackage{showframe}  %% for checking margins
+\definecolor{Gray}{gray}{0.9}
+\definecolor{vlightgray}{gray}{0.93}
+\usepackage{bigfoot} % verbatim in footnote
+\interfootnotelinepenalty=10000 % don't break footnotes into several pages
+
+% ********************************************************************
+%
+%        Bibliography
+%
+% ********************************************************************
 \bibliographystyle{ACM-Reference-Format}
-%% Citation style
-%\citestyle{acmauthoryear}  %% For author/year citations
-%\citestyle{acmnumeric}     %% For numeric citations
-%\setcitestyle{nosort}      %% With 'acmnumeric', to disable automatic
-                            %% sorting of references within a single citation;
-                            %% e.g., \cite{Smith99,Carpenter05,Baker12}
-                            %% rendered as [14,5,2] rather than [2,5,14].
-%\setcitesyle{nocompress}   %% With 'acmnumeric', to disable automatic
-                            %% compression of sequential references within a
-                            %% single citation;
-                            %% e.g., \cite{Baker12,Baker14,Baker16}
-                            %% rendered as [2,3,4] rather than [2-4].
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Note: Authors migrating a paper from traditional SIGPLAN
-%% proceedings format to PACMPL format must update the
-%% '\documentclass' and topmatter commands above; see
-%% 'acmart-pacmpl-template.tex'.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% ********************************************************************
+%
+% Fine-tune hyperreferences (hyperref should be called last)
+%
+% ********************************************************************
+% \hypersetup{%
+%   %draft, % hyperref's draft mode, for printing see below
+%   colorlinks=true, linktocpage=true, pdfstartpage=3, pdfstartview=FitV,%
+%   % uncomment the following line if you want to have black links (e.g., for printing)
+%   %colorlinks=false, linktocpage=false, pdfstartpage=3, pdfstartview=FitV, pdfborder={0 0 0},%
+%   breaklinks=true, pageanchor=true,%
+%   pdfpagemode=UseNone, %
+%   % pdfpagemode=UseOutlines,%
+%   plainpages=false, bookmarksnumbered, bookmarksopen=true, bookmarksopenlevel=1,%
+%   hypertexnames=true, pdfhighlight=/O,%nesting=true,%frenchlinks,%
+%   urlcolor=CTurl, linkcolor=CTlink, citecolor=CTcitation, %pagecolor=RoyalBlue,%
+%   %urlcolor=Black, linkcolor=Black, citecolor=Black, %pagecolor=Black,%
+%   pdftitle={\myTitle},%
+%   pdfauthor={\myName},%
+%   pdfsubject={\myTitle},%
+%   pdfkeywords={\myKws},%
+%   pdfcreator={pdfLaTeX},%
+%   pdfproducer={LaTeX with hyperref and classicthesis}%
+% }
 
+% *********************************************************************************************
+%
+%               Setup code listings
+%
+% *********************************************************************************************
 
-%% Some recommended packages.
-\usepackage{booktabs}   %% For formal tables:
-                        %% http://ctan.org/pkg/booktabs
-\usepackage{subcaption} %% For complex figures with subfigures/subcaptions
-                        %% http://ctan.org/pkg/subcaption
+\usepackage{style/julia}
+\usepackage{mathpartir,listings}
+\lstdefinelanguage{Jules}{
+  keywords={struct,is,end},
+  keywordstyle=\color{darkgray}\bfseries,
+  ndkeywords={struct,is,end},
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  sensitive=false,  comment=[l]{//},  morecomment=[s]{/*}{*/},
+  commentstyle=\color{gray}\ttfamily,  stringstyle=\color{gray}\ttfamily,
+  morestring=[b]',  morestring=[b]",
+  aboveskip=\medskipamount, %0em,
+  belowskip=\medskipamount, %0em
+  escapeinside={(*@}{@*)}
+}
+\lstset{
+  language=Jules,  extendedchars=true,  basicstyle=\small\ttfamily,
+  showstringspaces=false,   showspaces=false,  numberstyle=\small,
+  numbersep=9pt,  tabsize=2, breaklines=true,  showtabs=false, captionpos=b
+}
 
-\usepackage{xspace}
-\usepackage{mathpartir}
-\usepackage{framed}
-\usepackage[font=itshape]{quoting}
+\newcommand{\code}[1]{{\ttfamily #1}\xspace}
+\renewcommand{\c}[1]{\lstinline[language=Julia]!#1!\xspace}
