--- a/metadata.tex
+++ b/metadata.tex
@@ -12,5 +12,13 @@
 \email{pelenitsyn.a@northeastern.edu}          %% \email is recommended
 
 \begin{abstract}
-  TODO
+Julia is a dynamic language for scientific computing. For a dynamic language,
+Julia is surprisingly typefull. Types are used not only to structure data but
+also to guide dynamic dispatch – the main design tool in the language. No
+matter the dynamism, Julia is performant: flexibility is compiled away at the
+run time using a simple but smart type-specialization based optimization
+technique called type stability. Based on a model of a JIT mimicking Julia
+from previous works, we present the first algorithm to approximate type
+stability of Julia code. Implementation and evaluation of the algorithm is
+still a work in progress.
 \end{abstract}
