--- a/main.tex
+++ b/main.tex
@@ -287,14 +287,14 @@ possible) allowed concrete input types of a method ---~\figref{fig:infer-ts}.
 
 Let us consider every step of the algorithm described
 on~\figref{fig:infer-ts} and show its meaning using an example.
-The list below also assigns the numbers to each step in our
+The list below also assigns the numbers to each step in our algorithm.
 \begin{enumerate}
 
   \item The input of the algorithm is a Julia method. Methods in Julia are
   represented by runtime objects of type \c{Method} and can be manipulated as
   all other objects (e.g. stored in collections, responding to field accesses, etc.).
 
-  For example, consider the \c{length} from the Julia's standard library. We can
+  For example, consider the \c{length} method from the Julia's standard library. We can
   get the corresponding \c{Method} object using the standard \c{@which} macro
   applied to an application of the \c{length} method. This can be done in the
   Julia REPL (signified by the \texttt{julia>} prefix).
@@ -403,7 +403,7 @@ parameter that gives an arbitrary upper bound for the number of steps we are
 allowed to perform before we give up.
 
 Another implementation concern is step 3 where we need to generate a concrete
-suptype of the input type. Although, there is no built-in facility for this
+subtype of the input type. Although, there is no built-in facility for this
 task, Julia allows getting immediate subtypes of a given type using the
 \c{subtypes} method. As our current implementation shows, with enough care, it
 is not hard to enumerate concrete subtypes applying the \c{subtypes} method
@@ -412,7 +412,7 @@ iteratively.
 \section{Evaluation}%
 \label{sec:eval}
 
-\citet{Pelenitsyn21} analyzed type stability of a corpus of open-source Juila
+\citet{Pelenitsyn21} analyzed type stability of a corpus of open-source Julia
 packages dynamically via executing test suites of the packages and inspecting the
 resulting method instances collected from the internal state of the virtual
 machine. We propose to run our algorithm for statically inferring type stability
