accepted, so add ACM stuff

--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,13 @@
-\documentclass[sigplan,review,anonymous]{acmart}
-
-\settopmatter{printfolios=true,printccs=false,printacmref=false}
+\documentclass[sigplan,screen]{acmart}
 
 \input{preamble}
 \input{macros}
 
 \begin{document}
-\title[Approximating Type Stability in the Julia JIT (work in progress)]{Approximating Type Stability in the Julia JIT\\(work in progress)}
+
+\title[Approximating Type Stability in the Julia JIT (work in progress)]%
+{Approximating Type Stability in the Julia JIT\\(work in progress)}
+
 \input{metadata}
 
 \maketitle
